# youtube-summarizer

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/youtube_summarizer/: __main__.py  api.py  chat.py  chatjobs.py  config.py  config_manager.py  database.py  download.py  jobs.py  scribe.py  summarize.py  summaryjobs.py  utils.py
backend/tests/: job-stream-test.html
bruno/Youtube Summarizer/: Get Video Summary.bru  Get Video Transcript.bru  Get Videos.bru  Get status of job copy copy.bru  Get status of job copy.bru  Get status of job.bru  Subscribe in middle of job.bru  Summarize Long Video.bru  Summarize Medium Video.bru  Summarize Short Video.bru  bruno.json
content/: db.json
content/summaries/: EQ5mAHUgK6g.txt
content/transcriptions/: EQ5mAHUgK6g.txt
frontend/: .dockerignore  Caddyfile  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: settings.ts  videos.ts
frontend/src/components/: ChatDisplay.tsx  ChatInput.tsx  ChatMessage.tsx  Dashboard.tsx  Header.tsx  Layout.tsx  ProcessingView.tsx  SearchBar.tsx  Sidebar.tsx  (+6 more)
scripts/: build.sh  build_backend.sh  build_frontend.sh  push_backend.sh  push_frontend.sh  start.sh
src/youtube_summarizer/: __main__.py  api.py  config.py  database.py  download.py  jobs.py  scribe.py  summarize.py  utils.py
(+13 files in other folders)
